vcluster_versioned_docs/version-0.34.0/_partials/config/snapshots.mdx

<details className="config-field" data-expandable="true">
<summary>

## `snapshots` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots}

Snapshots holds configuration for automatic vCluster snapshots.

</summary>




<details className="config-field" data-expandable="true">
<summary>

### `auto` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots-auto}

Auto holds automatic snapshot configuration

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `schedule` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots-auto-schedule}

Schedule specifies a scheduled time in Cron format, see https://en.wikipedia.org/wiki/Cron for a virtual cluster snapshot to be taken

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `timezone` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots-auto-timezone}

Timezone specifies time zone used for scheduled snapshot operations. Defaults to UTC.
Accepts the same format as time.LoadLocation() in Go (https://pkg.go.dev/time#LoadLocation).
The value should be a location name corresponding to a file in the IANA Time Zone database, such as "America/New_York".

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `retention` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots-auto-retention}

Retention specifies how long snapshots will be kept

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `period` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots-auto-retention-period}

Period defines the number of days a snapshot will be kept

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `maxSnapshots` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots-auto-retention-maxSnapshots}

MaxSnapshots defines the number of snapshots that can be taken

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `storage` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots-auto-storage}

Storage specifies where the snapshot will be stored

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `type` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots-auto-storage-type}

Type specifies supported type of storage services for a snapshot S3/OCI/Container, see https://www.vcluster.com/docs/vcluster/manage/backup-restore#store-snapshots-in-s3-buckets

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `s3` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots-auto-storage-s3}

S3 holds configuration for storing snapshots in S3-compatible bucket

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `url` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots-auto-storage-s3-url}

Url specifies url to the storage service

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `credential` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots-auto-storage-s3-credential}

Credential secret with the S3 Credentials, it should contain AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY, AWS_SESSION_TOKEN

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `secretName` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots-auto-storage-s3-credential-secretName}

SecretName is the secret name with credential

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `secretNamespace` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots-auto-storage-s3-credential-secretNamespace}

SecretNamespace is the secret namespace with credential

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `oci` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots-auto-storage-oci}

OCI holds configuration for storing snapshots in OCI image registries

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `repository` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots-auto-storage-oci-repository}

Repository OCI repository to store the snapshot

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `credential` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots-auto-storage-oci-credential}

Credential secret with the OCI Credentials

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `secretName` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots-auto-storage-oci-credential-secretName}

SecretName is the secret name with credential

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `secretNamespace` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots-auto-storage-oci-credential-secretNamespace}

SecretNamespace is the secret namespace with credential

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `username` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots-auto-storage-oci-username}

Username to authenticate with the OCI registry

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `password` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots-auto-storage-oci-password}

Password to authenticate with the OCI registry

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `container` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots-auto-storage-container}

Container holds configuration for storing snapshots as local files inside a vCluster container

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `path` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots-auto-storage-container-path}

Path specifies directory to store the snapshot

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `volume` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots-auto-storage-container-volume}

Volume specifies which volume needs to be mounted into the container to store the snapshot

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots-auto-storage-container-volume-name}

Name to be used to mount the volume

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `path` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots-auto-storage-container-volume-path}

Path to the volume mount

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `azure` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots-auto-storage-azure}

Azure holds configuration for storing snapshots in Azure Blob Storage

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `blobUrl` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots-auto-storage-azure-blobUrl}

BlobURL specifies the Azure Blob Storage URL in the format https://&#123;account&#125;.blob.core.windows.net/&#123;container&#125;/&#123;path&#125;

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `credential` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots-auto-storage-azure-credential}

Credential secret with the Azure credentials. The secret should contain either:
AZURE_STORAGE_KEY (storage account access key), or
AZURE_TENANT_ID, AZURE_CLIENT_ID, AZURE_CLIENT_SECRET, AZURE_SUBSCRIPTION_ID, AZURE_RESOURCE_GROUP (service principal)

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `secretName` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots-auto-storage-azure-credential-secretName}

SecretName is the secret name with credential

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `secretNamespace` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots-auto-storage-azure-credential-secretNamespace}

SecretNamespace is the secret namespace with credential

</summary>



</details>


</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `volumes` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots-auto-volumes}

Volumes specifies configuration for volume snapshots

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#snapshots-auto-volumes-enabled}

Enabled specifies whether a snapshot should also include volumes in the snapshot

</summary>



</details>


</details>


</details>


</details>
